@@ -1,39 +1,49 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
-_Public Classes_
+#### Public Classes
 
 * [`dconf`](#dconf): Manage 'dconf' and associated entries
 
-_Private Classes_
+#### Private Classes
 
 * `dconf::install`: Install the dconf packages
 
-**Defined types**
+### Defined types
 
 * [`dconf::profile`](#dconfprofile): Updates a ``dconf`` profile entry to ``/etc/dconf/profile/$name``
 * [`dconf::settings`](#dconfsettings): Add a dconf rule to the profile of your choice  This adds a configuration file to the /etc/dconf/db/<profile>.d directory. The dconf database
 
-**Data types**
+### Data types
 
 * [`Dconf::DBSettings`](#dconfdbsettings): Valid dconf database settings
 * [`Dconf::SettingsHash`](#dconfsettingshash): Valid individual dconf settings
 
 ## Classes
 
-### dconf
+### <a name="dconf"></a>`dconf`
 
 Manage 'dconf' and associated entries
 
 #### Parameters
 
-The following parameters are available in the `dconf` class.
+The following parameters are available in the `dconf` class:
 
-##### `user_profile`
+* [`user_profile`](#user_profile)
+* [`user_settings`](#user_settings)
+* [`package_ensure`](#package_ensure)
+* [`use_user_profile_defaults`](#use_user_profile_defaults)
+* [`user_profile_defaults_name`](#user_profile_defaults_name)
+* [`user_profile_target`](#user_profile_target)
+* [`use_user_settings_defaults`](#use_user_settings_defaults)
+* [`user_settings_defaults_name`](#user_settings_defaults_name)
+
+##### <a name="user_profile"></a>`user_profile`
 
 Data type: `Dconf::DBSettings`
 
@@ -41,15 +51,15 @@ The contents of the default user profile that will be added
 
 @see data/common.yaml
 
-##### `user_settings`
+##### <a name="user_settings"></a>`user_settings`
 
 Data type: `Optional[Dconf::SettingsHash]`
 
 Custom user settings that can be provided via Hiera globally
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `package_ensure`
+##### <a name="package_ensure"></a>`package_ensure`
 
 Data type: `Simplib::PackageEnsure`
 
@@ -57,77 +67,83 @@ The version of `dconf` to install
 
 * Accepts any valid `ensure` parameter value for the `package` resource
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
-##### `use_user_profile_defaults`
+##### <a name="use_user_profile_defaults"></a>`use_user_profile_defaults`
 
 Data type: `Boolean`
 
 Add the default `user_profile` settings to the system
 
-Default value: `true`
+Default value: ``true``
 
-##### `user_profile_defaults_name`
+##### <a name="user_profile_defaults_name"></a>`user_profile_defaults_name`
 
 Data type: `String[1]`
 
 The name that should be used for the custom `dconf::profile` in
 `user_profile`
 
-Default value: 'Defaults'
+Default value: `'Defaults'`
 
-##### `user_profile_target`
+##### <a name="user_profile_target"></a>`user_profile_target`
 
 Data type: `String[1]`
 
 The name of the profile that should be targeted for the defaults
 
-Default value: 'user'
+Default value: `'user'`
 
-##### `use_user_settings_defaults`
+##### <a name="use_user_settings_defaults"></a>`use_user_settings_defaults`
 
 Data type: `Boolean`
 
 Enable creation of custom `dconf::settings` based on the `user_settings` Hash
 
-Default value: $use_user_profile_defaults
+Default value: `$use_user_profile_defaults`
 
-##### `user_settings_defaults_name`
+##### <a name="user_settings_defaults_name"></a>`user_settings_defaults_name`
 
 Data type: `String[1]`
 
 The name that should be used for the custom 'dconf::settings' as well as
 the target profile for those settings
 
-Default value: $user_profile_defaults_name
+Default value: `$user_profile_defaults_name`
 
 ## Defined types
 
-### dconf::profile
+### <a name="dconfprofile"></a>`dconf::profile`
 
 Updates a ``dconf`` profile entry to ``/etc/dconf/profile/$name``
 
 * **See also**
-man
-7 dconf
+  * man
+    * 7 dconf
 
 #### Parameters
 
-The following parameters are available in the `dconf::profile` defined type.
+The following parameters are available in the `dconf::profile` defined type:
 
-##### `name`
+* [`name`](#name)
+* [`target`](#target)
+* [`entries`](#entries)
+* [`target`](#target)
+* [`base_dir`](#base_dir)
+
+##### <a name="name"></a>`name`
 
 A globally unique name for the entry
 
-##### `target`
+##### <a name="target"></a>`target`
 
 Data type: `String[1]`
 
 The name of the profile file in ``base_dir``
 
-Default value: $name
+Default value: `$name`
 
-##### `entries`
+##### <a name="entries"></a>`entries`
 
 Data type: `Dconf::DBSettings`
 
@@ -144,21 +160,21 @@ One or entries in the following Hash format:
   * System DB => Between 11 and 39
   * Distro DB => 40
 
-##### `target`
+##### <a name="target"></a>`target`
 
 The target directory within which to create the profile
 
-Default value: $name
+Default value: `$name`
 
-##### `base_dir`
+##### <a name="base_dir"></a>`base_dir`
 
 Data type: `Stdlib::AbsolutePath`
 
 The base directory that will hold the resulting file
 
-Default value: '/etc/dconf/profile'
+Default value: `'/etc/dconf/profile'`
 
-### dconf::settings
+### <a name="dconfsettings"></a>`dconf::settings`
 
 Add a dconf rule to the profile of your choice
 
@@ -168,9 +184,14 @@ lock a value so that general users cannot change it.
 
 #### Parameters
 
-The following parameters are available in the `dconf::settings` defined type.
+The following parameters are available in the `dconf::settings` defined type:
 
-##### `settings_hash`
+* [`settings_hash`](#settings_hash)
+* [`profile`](#profile)
+* [`ensure`](#ensure)
+* [`base_dir`](#base_dir)
+
+##### <a name="settings_hash"></a>`settings_hash`
 
 Data type: `Dconf::SettingsHash`
 
@@ -185,52 +206,60 @@ each setting like in the exmaple
     }
   }
 
-Default value: {}
+Default value: `{}`
 
-##### `profile`
+##### <a name="profile"></a>`profile`
 
 Data type: `Optional[String[1]]`
 
 The dconf profile where you want to place the key/value.
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `ensure`
+##### <a name="ensure"></a>`ensure`
 
 Data type: `Enum['present','absent']`
 
 Ensure the entire settings Hash is present or absent
 
-Default value: 'present'
+Default value: `'present'`
 
-##### `base_dir`
+##### <a name="base_dir"></a>`base_dir`
 
 Data type: `Stdlib::AbsolutePath`
 
 The database base directory. This probably shouldn't be changed.
 
-Default value: '/etc/dconf/db'
+Default value: `'/etc/dconf/db'`
 
 ## Data types
 
-### Dconf::DBSettings
+### <a name="dconfdbsettings"></a>`Dconf::DBSettings`
 
 Valid dconf database settings
 
-Alias of `Hash[String[1], Struct[{
+Alias of
+
+```puppet
+Hash[String[1], Struct[{
     'type'  => Enum['user', 'system', 'service', 'file'], # The type of database
     'order' => Optional[Integer[1]]                       # The order of the entry in the list
-  }]]`
+  }]]
+```
 
-### Dconf::SettingsHash
+### <a name="dconfsettingshash"></a>`Dconf::SettingsHash`
 
 Valid individual dconf settings
 
-Alias of `Hash[String[1], Hash[
+Alias of
+
+```puppet
+Hash[String[1], Hash[
     String[1],
     Struct[{
       'value' => NotUndef,
       'lock'  => Optional[Boolean]
     }]
-  ]]`
+  ]]
+```
 
