@@ -12,9 +12,6 @@ unless ENV['BEAKER_provision'] == 'no'
     else
       install_puppet
     end
-    # Install git, it's a dependency for inspec profiles
-    # Found this when experiencing https://github.com/chef/inspec/issues/1270
-    install_package(host, 'git')
   end
 end
 
